@@ -164,6 +164,176 @@ ppdPageSize(ppd_file_t *ppd,		/* I - PPD file record */
 
 
 /*
+ * 'ppdPageSizeLimits()' - Return the custom page size limits.
+ *
+ * This function returns the minimum and maximum custom page sizes and printable
+ * areas based on the currently-marked (selected) options.
+ *
+ * If the specified PPD file does not support custom page sizes, both
+ * "minimum" and "maximum" are filled with zeroes.
+ *
+ * @since CUPS 1.4@
+ */
+
+int					/* O - 1 if custom sizes are supported, 0 otherwise */
+ppdPageSizeLimits(ppd_file_t *ppd,	/* I - PPD file record */
+                  ppd_size_t *minimum,	/* O - Minimum custom size */
+		  ppd_size_t *maximum)	/* O - Maximum custom size */
+{
+  ppd_choice_t	*qualifier2,		/* Second media qualifier */
+		*qualifier3;		/* Third media qualifier */
+  ppd_attr_t	*attr;			/* Attribute */
+  float		width,			/* Min/max width */
+		length;			/* Min/max length */
+  char		spec[PPD_MAX_NAME];	/* Selector for min/max */
+
+
+ /*
+  * Range check input...
+  */
+
+  if (!ppd || !ppd->variable_sizes || !minimum || !maximum)
+  {
+    if (minimum)
+      memset(minimum, 0, sizeof(ppd_size_t));
+
+    if (maximum)
+      memset(maximum, 0, sizeof(ppd_size_t));
+
+    return (0);
+  }
+
+ /*
+  * See if we have the cupsMediaQualifier2 and cupsMediaQualifier3 attributes...
+  */
+
+  cupsArraySave(ppd->sorted_attrs);
+
+  if ((attr = ppdFindAttr(ppd, "cupsMediaQualifier2", NULL)) != NULL &&
+      attr->value)
+    qualifier2 = ppdFindMarkedChoice(ppd, attr->value);
+  else
+    qualifier2 = NULL;
+
+  if ((attr = ppdFindAttr(ppd, "cupsMediaQualifier3", NULL)) != NULL &&
+      attr->value)
+    qualifier3 = ppdFindMarkedChoice(ppd, attr->value);
+  else
+    qualifier3 = NULL;
+
+ /*
+  * Figure out the current minimum width and length...
+  */
+
+  if (qualifier2)
+  {
+   /*
+    * Try getting cupsMinSize...
+    */
+
+    if (qualifier3)
+    {
+      snprintf(spec, sizeof(spec), ".%s.%s", qualifier2->choice,
+	       qualifier3->choice);
+      attr = ppdFindAttr(ppd, "cupsMinSize", spec);
+    }
+    else
+      attr = NULL;
+
+    if (!attr)
+    {
+      snprintf(spec, sizeof(spec), ".%s.", qualifier2->choice);
+      attr = ppdFindAttr(ppd, "cupsMinSize", spec);
+    }
+
+    if (!attr && qualifier3)
+    {
+      snprintf(spec, sizeof(spec), "..%s", qualifier3->choice);
+      attr = ppdFindAttr(ppd, "cupsMinSize", spec);
+    }
+
+    if (!attr ||
+        (attr->value && sscanf(attr->value, "%f%f", &width, &length) != 2))
+    {
+      width  = ppd->custom_min[0];
+      length = ppd->custom_min[1];
+    }
+  }
+  else
+  {
+    width  = ppd->custom_min[0];
+    length = ppd->custom_min[1];
+  }
+
+  minimum->width  = width;
+  minimum->length = length;
+  minimum->left   = ppd->custom_margins[0];
+  minimum->bottom = ppd->custom_margins[1];
+  minimum->right  = width - ppd->custom_margins[2];
+  minimum->top    = length - ppd->custom_margins[3];
+
+ /*
+  * Figure out the current maximum width and length...
+  */
+
+  if (qualifier2)
+  {
+   /*
+    * Try getting cupsMaxSize...
+    */
+
+    if (qualifier3)
+    {
+      snprintf(spec, sizeof(spec), ".%s.%s", qualifier2->choice,
+	       qualifier3->choice);
+      attr = ppdFindAttr(ppd, "cupsMaxSize", spec);
+    }
+    else
+      attr = NULL;
+
+    if (!attr)
+    {
+      snprintf(spec, sizeof(spec), ".%s.", qualifier2->choice);
+      attr = ppdFindAttr(ppd, "cupsMaxSize", spec);
+    }
+
+    if (!attr && qualifier3)
+    {
+      snprintf(spec, sizeof(spec), "..%s", qualifier3->choice);
+      attr = ppdFindAttr(ppd, "cupsMaxSize", spec);
+    }
+
+    if (!attr ||
+        (attr->value && sscanf(attr->value, "%f%f", &width, &length) != 2))
+    {
+      width  = ppd->custom_max[0];
+      length = ppd->custom_max[1];
+    }
+  }
+  else
+  {
+    width  = ppd->custom_max[0];
+    length = ppd->custom_max[1];
+  }
+
+  maximum->width  = width;
+  maximum->length = length;
+  maximum->left   = ppd->custom_margins[0];
+  maximum->bottom = ppd->custom_margins[1];
+  maximum->right  = width - ppd->custom_margins[2];
+  maximum->top    = length - ppd->custom_margins[3];
+
+ /*
+  * Return the min and max...
+  */
+
+  cupsArrayRestore(ppd->sorted_attrs);
+
+  return (1);
+}
+
+
+/*
  * 'ppdPageWidth()' - Get the page width for the given size.
  */
 
